deploy/network-policy/postgres/allow-pg-internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pg-internal
  namespace: dev-postgresql
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 8432
    - protocol: TCP
      port: 5432
  egress:
  - to:
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 8432
    - protocol: TCP
      port: 5432
