deploy/network-policy/postgres/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: dev-postgresql
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
